--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,15 @@ buildNumber.properties
 .mvn/timing.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
+.idea/.gitignore
+.idea/cloud-alibaba-getting-started.iml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+.idea/compiler.xml
+.idea/jarRepositories.xml
+.idea/libraries/
+nacos-config-sample/nacos-config-sample.iml
+.idea/encodings.xml
+.idea/uiDesigner.xml
+nacos-config-sample/src/test/
